--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -1,30 +1,5 @@
-/* ==========================================================================
-   Base
-   ========================================================================== */
+body {
+  background: black;
+  color: white; }
 
-body {}
-a {}
-
-/* =============================================================================
-   Header
-   ========================================================================== */
-
-
-/* ==========================================================================
-   Content
-   ========================================================================== */
-
-
-/* ==========================================================================
-   Footer
-   ========================================================================== */
-
-
-/* ==========================================================================
-   WordPress Generated Classes
-   See: http://codex.wordpress.org/CSS#WordPress_Generated_Classes
-   ========================================================================== */
-
-.aligncenter { display: block; margin: 0 auto; }
-.alignleft { float: left; }
-.alignright { float: right; }
+/*# sourceMappingURL=styles.css.map */
