--- a/wp-content/themes/mc2015/css/_base.sass
+++ b/wp-content/themes/mc2015/css/_base.sass
@@ -1,3 +1,22 @@
+*,
+*:after,
+*:before
+	box-sizing: border-box
+
+a
+	text-decoration: none
+
 body
-	background: black
-	color: white
+	background: white
+	border: 10px solid white
+	color: black
+
+body,
+html,
+main,
+.wrap
+	height: 100%
+	max-height: 100%
+
+main
+	padding: 1em
