--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -1,5 +1,42 @@
-body {
-  background: black;
-  color: white; }
+*,
+*:after,
+*:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
 
-/*# sourceMappingURL=styles.css.map */
+a {
+  text-decoration: none; }
+
+body {
+  background: white;
+  border: 10px solid white;
+  color: black; }
+
+body,
+html,
+main,
+.wrap {
+  height: 100%;
+  max-height: 100%; }
+
+main {
+  padding: 1em; }
+
+main.index {
+  -webkit-background-size: cover !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  color: white; }
+  main.index a {
+    color: white; }
+
+.prod-team {
+  -webkit-text-orientation: upright;
+  -moz-text-orientation: upright;
+  -ms-text-orientation: upright;
+  text-orientation: upright;
+  -webkit-writing-mode: vertical-rl;
+  -moz-writing-mode: vertical-rl;
+  -ms-writing-mode: vertical-rl;
+  writing-mode: vertical-rl; }
