Webfonts and fontface

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -1,4 +1,5 @@
 .prod-team
+	font-family: monocromo
 	-webkit-text-orientation: upright
 	-moz-text-orientation: upright
 	-ms-text-orientation: upright
