--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -1,3 +1,4 @@
+@import url(fontface.css);
 *,
 *:after,
 *:before {
@@ -11,7 +12,8 @@ a {
 body {
   background: white;
   border: 10px solid white;
-  color: black; }
+  color: black;
+  font-family: "euclid_flex"; }
 
 body,
 html,
@@ -32,6 +34,7 @@ main.index {
     color: white; }
 
 .prod-team {
+  font-family: monocromo;
   -webkit-text-orientation: upright;
   -moz-text-orientation: upright;
   -ms-text-orientation: upright;
