A bit of styling for index page

--- a/wp-content/themes/mc2015/css/_base.sass
+++ b/wp-content/themes/mc2015/css/_base.sass
@@ -19,5 +19,12 @@ main,
 	height: 100%
 	max-height: 100%
 
+figure
+	margin: 0
+
+	img
+		vertical-align: middle
+		width: 100%
+
 main
 	padding: 1em
