--- a/wp-content/themes/mc2015/css/_layout.sass
+++ b/wp-content/themes/mc2015/css/_layout.sass
@@ -1,7 +1,25 @@
-main.index
-	background-size: cover !important
-	background-repeat: no-repeat !important
-	color: white
+main
+	position: relative
 
-	a
+	&.index
+		background-size: cover !important
+		background-repeat: no-repeat !important
 		color: white
+
+		a
+			color: white
+
+		.menu
+			font-size: 66px
+			font-weight: bold
+			text-align: center
+
+			li
+				display: block
+				//margin-top: -1em
+				line-height: 1em
+
+			ul
+				list-style-type: none
+				margin-bottom: 0
+				padding: 0
