Rotation for monocromo and infinity

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -36,3 +36,10 @@
 	-moz-writing-mode: vertical-rl
 	-ms-writing-mode: vertical-rl
 	writing-mode: vertical-rl
+
+	a
+		display: inline-block
+		transition: transform 0.3s
+
+		&:hover
+			transform: rotate(90deg)
