--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -1,12 +1,30 @@
 .announcements
-	border: 3px solid
-	line-height: 1em
-	padding: 0.25em
+	font-size: 17px
+	margin: 0 auto
 	text-align: center
 
-.kc-ml-languages
-	display: inline-block
+	span
+		display: inline-block
+		border: 3px solid
+		line-height: 1em
+		padding: 0.25em
+
+.footer-item
+	margin-bottom: 1em
+
+.footer-items
+	font-size: 14px
+	font-weight: bold
+	line-height: 1em
 	list-style-type: none
+	margin-bottom: 0
+	padding: 0
+
+.kc-ml-languages
+	display: none
+	list-style-type: none
+	margin: 0
+	padding: 0
 	font-size: 12px
 	font-weight: 500
 
@@ -23,6 +41,29 @@
 	display: inline-block
 	width: 250px
 
+.picture-credits
+	bottom: 0
+	display: none
+	font-size: 12px
+	font-weight: 500
+	line-height: 1em
+	position: absolute
+	right: 0
+	text-align: center
+	top: 0
+	transform: rotate(180deg)
+	-webkit-writing-mode: vertical-lr
+	-moz-writing-mode: vertical-lr
+	-ms-writing-mode: vertical-lr
+	writing-mode: vertical-lr
+	z-index: 0
+
+	span
+		&:not(:first-of-type):before
+			content: '/'
+			display: inline-block
+			margin-right: 0.2em
+
 .prod-team
 	font-family: monocromo
 	position: absolute
@@ -32,10 +73,11 @@
 	-ms-text-orientation: upright
 	text-orientation: upright
 	top: 0.5em
-	-webkit-writing-mode: vertical-rl
-	-moz-writing-mode: vertical-rl
-	-ms-writing-mode: vertical-rl
-	writing-mode: vertical-rl
+	-webkit-writing-mode: vertical-lr
+	-moz-writing-mode: vertical-lr
+	-ms-writing-mode: vertical-lr
+	writing-mode: vertical-lr
+	z-index: 1
 
 	a
 		display: inline-block
@@ -43,3 +85,22 @@
 
 		&:hover
 			transform: rotate(90deg)
+
+@media screen and (min-width: $desktop)
+	.footer-item
+		display: inline-block
+		text-align: left
+
+		&:not(:last-of-type)
+			margin-right: 2em
+
+	.footer-items
+		left: 0
+		right: 0
+		text-align: center
+
+	.kc-ml-languages
+		display: inline-block
+
+	.picture-credits
+		display: block
