--- a/wp-content/themes/mc2015/css/_layout.sass
+++ b/wp-content/themes/mc2015/css/_layout.sass
@@ -33,6 +33,9 @@ main
 			font-weight: bold
 			text-align: center
 
+			a:hover
+				color: $gray
+
 			li
 				display: block
 				//margin-top: -1em
