--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -7,7 +7,7 @@
 		display: inline-block
 		border: 3px solid
 		line-height: 1em
-		padding: 0.25em
+		padding: 0.75em 1em
 
 .footer-item
 	margin-bottom: 1em
