--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -7,7 +7,9 @@
   box-sizing: border-box; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s; }
 
 body {
   background: white;
@@ -59,6 +61,8 @@ main {
       font-size: 66px;
       font-weight: bold;
       text-align: center; }
+      main.index .menu a:hover {
+        color: #CCC; }
       main.index .menu li {
         display: block;
         line-height: 1em; }
@@ -85,7 +89,7 @@ main {
     display: inline-block;
     border: 3px solid;
     line-height: 1em;
-    padding: 0.25em; }
+    padding: 0.75em 1em; }
 
 .footer-item {
   margin-bottom: 1em; }
