--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -19,6 +19,10 @@
 	list-style-type: none
 	margin-bottom: 0
 	padding: 0
+	text-align: left
+
+.index-menu
+	margin-top: -10em
 
 .kc-ml-languages
 	display: none
@@ -87,6 +91,9 @@
 			transform: rotate(90deg)
 
 @media screen and (min-width: $desktop)
+	.index-menu
+		margin-top: 0
+
 	.footer-item
 		display: inline-block
 		text-align: left
