Changed logo for icon

--- a/wp-content/themes/mc2015/css/_layout.sass
+++ b/wp-content/themes/mc2015/css/_layout.sass
@@ -12,6 +12,9 @@ main
 		a
 			color: white
 
+			&:hover
+				color: rgba(255, 255, 255, 0.7)
+
 		.footer-items,
 		.kc-ml-languages,
 		.logo
@@ -33,9 +36,6 @@ main
 			font-size: 66px
 			font-weight: bold
 			text-align: center
-
-			a:hover
-				color: rgba(255, 255, 255, 0.7)
 
 			li
 				display: block
