--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -43,7 +43,9 @@
 
 .logo
 	display: inline-block
-	width: 250px
+	
+	a
+		font-size: 4rem
 
 .picture-credits
 	bottom: 0
@@ -71,12 +73,12 @@
 .prod-team
 	font-family: monocromo
 	position: absolute
-	right: 0.5em
+	right: 0.5rem
 	-webkit-text-orientation: upright
 	-moz-text-orientation: upright
 	-ms-text-orientation: upright
 	text-orientation: upright
-	top: 0.5em
+	top: 0.5rem
 	-webkit-writing-mode: vertical-lr
 	-moz-writing-mode: vertical-lr
 	-ms-writing-mode: vertical-lr
