--- a/wp-content/themes/mc2015/css/_base.sass
+++ b/wp-content/themes/mc2015/css/_base.sass
@@ -9,14 +9,18 @@ a
 
 body
 	background: white
-	border: 10px solid white
+	border: 10px solid black
 	color: black
 	font-family: 'euclid_flex'
+	min-height: 100%
 
-body,
+	&.home
+		border-color: white
+
+body.home,
 html,
-main,
-.wrap
+main.index,
+.wrap.index
 	min-height: 100%
 	height: 100%
 
@@ -26,6 +30,10 @@ figure
 	img
 		vertical-align: middle
 		width: 100%
+
+header
+	padding: 1em
+	position: relative
 
 main
 	padding: 1em
