--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -13,14 +13,17 @@ a {
 
 body {
   background: white;
-  border: 10px solid white;
+  border: 10px solid black;
   color: black;
-  font-family: "euclid_flex"; }
+  font-family: "euclid_flex";
+  min-height: 100%; }
+  body.home {
+    border-color: white; }
 
-body,
+body.home,
 html,
-main,
-.wrap {
+main.index,
+.wrap.index {
   min-height: 100%;
   height: 100%; }
 
@@ -29,6 +32,10 @@ figure {
   figure img {
     vertical-align: middle;
     width: 100%; }
+
+header {
+  padding: 1em;
+  position: relative; }
 
 main {
   padding: 1em; }
@@ -45,6 +52,8 @@ main {
     text-align: center; }
     main.index a {
       color: white; }
+      main.index a:hover {
+        color: rgba(255, 255, 255, 0.7); }
     main.index .footer-items,
     main.index .kc-ml-languages,
     main.index .logo {
@@ -62,8 +71,6 @@ main {
       font-size: 66px;
       font-weight: bold;
       text-align: center; }
-      main.index .menu a:hover {
-        color: rgba(255, 255, 255, 0.7); }
       main.index .menu li {
         display: block;
         line-height: 1em; }
@@ -126,8 +133,9 @@ main {
       margin-right: 0.2em; }
 
 .logo {
-  display: inline-block;
-  width: 250px; }
+  display: inline-block; }
+  .logo a {
+    font-size: 4rem; }
 
 .picture-credits {
   bottom: 0;
@@ -155,12 +163,12 @@ main {
 .prod-team {
   font-family: monocromo;
   position: absolute;
-  right: 0.5em;
+  right: 0.5rem;
   -webkit-text-orientation: upright;
   -moz-text-orientation: upright;
   -ms-text-orientation: upright;
   text-orientation: upright;
-  top: 0.5em;
+  top: 0.5rem;
   -webkit-writing-mode: vertical-lr;
   -moz-writing-mode: vertical-lr;
   -ms-writing-mode: vertical-lr;
