Menu for mobiles

--- a/wp-content/themes/mc2015/css/_base.sass
+++ b/wp-content/themes/mc2015/css/_base.sass
@@ -31,6 +31,14 @@ figure
 		vertical-align: middle
 		width: 100%
 
+header,
+footer
+	a
+		color: black
+
+		&:hover
+			color: rgba(0, 0, 0, 0.7)
+
 header
 	padding: 1em
 	position: relative
