--- a/wp-content/themes/mc2015/css/_layout.sass
+++ b/wp-content/themes/mc2015/css/_layout.sass
@@ -49,7 +49,7 @@ main
 
 .vertical-align
 	& > *
-		display: inline-block
+		display: inline-block !important
 		vertical-align: middle
 
 	&:before
