--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -47,6 +47,46 @@
 	a
 		font-size: 4rem
 
+.navigation-menu
+	height: $menu_height
+	position: relative
+	transition: all 0.3
+	width: 100%
+
+	nav,
+	.kc-ml-languages,
+	.prod-team
+		display: none
+
+	nav
+		width: 100%
+
+	ul
+		list-style-type: none
+		padding: 0
+		text-align: center
+
+	.icon-menu
+		position: absolute
+		right: 1em
+		top: 1em
+
+	.logo
+		left: 10px
+		position: absolute
+		top: 0
+
+	.menu
+		font-size: 66px
+		font-weight: bold
+		text-transform: lowercase
+
+	.nav-footer
+		bottom: 0
+		left: 0
+		position: absolute
+		right: 0
+
 .picture-credits
 	bottom: 0
 	display: none
