Better media queries for mobile menu

--- a/wp-content/themes/mc2015/css/_state.sass
+++ b/wp-content/themes/mc2015/css/_state.sass
@@ -1,19 +1,20 @@
-.navigation-menu.is-visible
-	background: #222
-	border: 10px solid
-	color: white
-	height: 100%
-	left: 0
-	position: fixed
-	top: 0
-	z-index: 999999999999999
-
-	a
+@media screen and (max-width: $desktop)
+	.navigation-menu.is-visible
+		background: #222
+		border: 10px solid
 		color: white
+		height: 100%
+		left: 0
+		position: fixed
+		top: 0
+		z-index: 999999999999999
 
-		&:hover
-			color: rgba(255, 255, 255, 0.7)
+		a
+			color: white
 
-	nav,
-	.kc-ml-languages
-		display: block
+			&:hover
+				color: rgba(255, 255, 255, 0.7)
+
+		nav,
+		.kc-ml-languages
+			display: block
