--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -144,40 +144,6 @@ main {
   .logo a {
     font-size: 4rem; }
 
-.navigation-menu {
-  height: 96px;
-  position: relative;
-  -webkit-transition: all 0.3;
-  transition: all 0.3;
-  width: 100%; }
-  .navigation-menu nav,
-  .navigation-menu .kc-ml-languages,
-  .navigation-menu .prod-team {
-    display: none; }
-  .navigation-menu nav {
-    width: 100%; }
-  .navigation-menu ul {
-    list-style-type: none;
-    padding: 0;
-    text-align: center; }
-  .navigation-menu .icon-menu {
-    position: absolute;
-    right: 1em;
-    top: 1em; }
-  .navigation-menu .logo {
-    left: 10px;
-    position: absolute;
-    top: 0; }
-  .navigation-menu .menu {
-    font-size: 66px;
-    font-weight: bold;
-    text-transform: lowercase; }
-  .navigation-menu .nav-footer {
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    right: 0; }
-
 .picture-credits {
   bottom: 0;
   display: none;
@@ -224,6 +190,40 @@ main {
       -ms-transform: rotate(90deg);
       transform: rotate(90deg); }
 
+@media screen and (max-width: 48em) {
+  .navigation-menu {
+    height: 96px;
+    position: relative;
+    -webkit-transition: all 0.3;
+    transition: all 0.3;
+    width: 100%; }
+    .navigation-menu nav,
+    .navigation-menu .kc-ml-languages,
+    .navigation-menu .prod-team {
+      display: none; }
+    .navigation-menu nav {
+      width: 100%; }
+    .navigation-menu ul {
+      list-style-type: none;
+      padding: 0;
+      text-align: center; }
+    .navigation-menu .icon-menu {
+      position: absolute;
+      right: 1em;
+      top: 1em; }
+    .navigation-menu .logo {
+      left: 10px;
+      position: absolute;
+      top: 0; }
+    .navigation-menu .menu {
+      font-size: 66px;
+      font-weight: bold;
+      text-transform: lowercase; }
+    .navigation-menu .nav-footer {
+      bottom: 0;
+      left: 0;
+      position: absolute;
+      right: 0; } }
 @media screen and (min-width: 48em) {
   .index-menu {
     margin-top: 0; }
@@ -244,19 +244,20 @@ main {
 
   .picture-credits {
     display: block; } }
-.navigation-menu.is-visible {
-  background: #222;
-  border: 10px solid;
-  color: white;
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  z-index: 999999999999999; }
-  .navigation-menu.is-visible a {
-    color: white; }
-    .navigation-menu.is-visible a:hover {
-      color: rgba(255, 255, 255, 0.7); }
-  .navigation-menu.is-visible nav,
-  .navigation-menu.is-visible .kc-ml-languages {
-    display: block; }
+@media screen and (max-width: 48em) {
+  .navigation-menu.is-visible {
+    background: #222;
+    border: 10px solid;
+    color: white;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    z-index: 999999999999999; }
+    .navigation-menu.is-visible a {
+      color: white; }
+      .navigation-menu.is-visible a:hover {
+        color: rgba(255, 255, 255, 0.7); }
+    .navigation-menu.is-visible nav,
+    .navigation-menu.is-visible .kc-ml-languages {
+      display: block; } }
