--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -144,6 +144,11 @@ main {
   .logo a {
     font-size: 4rem; }
 
+.navigation-menu .menu {
+  font-family: "suisse_works";
+  font-weight: bold;
+  text-transform: lowercase; }
+
 .picture-credits {
   bottom: 0;
   display: none;
@@ -207,23 +212,21 @@ main {
       list-style-type: none;
       padding: 0;
       text-align: center; }
-    .navigation-menu .icon-menu {
-      position: absolute;
-      right: 1em;
-      top: 1em; }
     .navigation-menu .logo {
       left: 10px;
       position: absolute;
       top: 0; }
     .navigation-menu .menu {
-      font-size: 66px;
-      font-weight: bold;
-      text-transform: lowercase; }
+      font-size: 66px; }
     .navigation-menu .nav-footer {
       bottom: 0;
       left: 0;
       position: absolute;
-      right: 0; } }
+      right: 0; }
+    .navigation-menu #hamburguer {
+      position: absolute;
+      right: 1em;
+      top: 1em; } }
 @media screen and (min-width: 48em) {
   .index-menu {
     margin-top: 0; }
@@ -241,6 +244,27 @@ main {
 
   .kc-ml-languages {
     display: inline-block; }
+
+  .navigation-menu nav {
+    display: inline-block;
+    vertical-align: top; }
+  .navigation-menu ul {
+    list-style-type: none;
+    padding: 0; }
+  .navigation-menu li {
+    display: inline-block;
+    margin-left: 1em; }
+  .navigation-menu .kc-ml-languages {
+    position: absolute;
+    right: 10em;
+    top: 1em; }
+  .navigation-menu .menu a {
+    color: rgba(0, 0, 0, 0.3); }
+  .navigation-menu .menu a:hover,
+  .navigation-menu .menu li.current_page_item a {
+    color: black; }
+  .navigation-menu #hamburguer {
+    display: none; }
 
   .picture-credits {
     display: block; } }
