Menu for mobiles, markup for artists page

--- a/wp-content/themes/mc2015/css/_state.sass
+++ b/wp-content/themes/mc2015/css/_state.sass
@@ -16,5 +16,9 @@
 				color: rgba(255, 255, 255, 0.7)
 
 		nav,
-		.kc-ml-languages
+		.kc-ml-languages,
+		.social-networks
 			display: block
+
+		#hamburguer
+			color: rgba(255, 255, 255, 0.7)
