--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -53,6 +53,16 @@
 		font-weight: bold
 		text-transform: lowercase
 
+	.social-networks
+		display: none
+		margin: 0
+
+		.social-network
+			color: white
+			display: inline-block
+			font-size: 1.5em
+			padding: 0.25em
+
 .picture-credits
 	bottom: 0
 	display: none
@@ -118,6 +128,11 @@
 			padding: 0
 			text-align: center
 
+		.kc-ml-languages
+			.current-language a
+				color: rgba(255, 255, 255, 0.7)
+
+
 		.logo
 			left: 10px
 			position: absolute
@@ -127,15 +142,18 @@
 			font-size: 66px
 
 		.nav-footer
-			bottom: 0
+			bottom: 1em
 			left: 0
 			position: absolute
 			right: 0
 
 		#hamburguer
+			cursor: pointer
+			font-size: 1.5em
 			position: absolute
 			right: 1em
 			top: 1em
+			transition: color 0.3s
 
 @media screen and (min-width: $desktop)
 	.index-menu
@@ -155,6 +173,8 @@
 
 	.kc-ml-languages
 		display: inline-block
+
+
 
 	.navigation-menu
 		nav
@@ -182,9 +202,8 @@
 			li.current_page_item a
 				color: black
 
-
 		#hamburguer
-			display: none
+			display: none !important
 
 	.picture-credits
 		display: block
