--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -9,6 +9,69 @@
 		line-height: 1em
 		padding: 0.75em 1em
 
+.artist
+	background-position: center
+	background-repeat: no-repeat
+	background-size: cover
+	padding: 1em
+	position: relative
+	text-align: center
+
+	.artist-name
+		font-size: 18px
+		font-weight: bold
+		padding: 6em 0
+		position: relative
+		z-index: 2
+		transition: background-color 0.3s
+
+	.view-artist
+		background-color: black
+		bottom: 3em
+		color: white
+		display: block
+		font-size: 10px
+		font-weight: bold
+		left: calc(50% - 34px)
+		opacity: 0
+		padding: 0.25em 0.5em
+		pointer-events: none
+		position: absolute
+		text-transform: uppercase
+		transition: opacity 0.3s
+
+		&:before
+			border-left: 2px solid black
+			bottom: 3em
+			content: ''
+			height: 4em
+			left: calc(50% - 1px)
+			position: absolute
+
+	&:before
+		background-color: rgba(255, 255, 255, 0.75)
+		content: ''
+		height: 100%
+		left: 0
+		position: absolute
+		top: 0
+		width: 100%
+		z-index: 1
+
+	&:hover
+		.artist-name
+			background-color: rgba(255, 255, 255, 0.8)
+
+		.view-artist
+			opacity: 1
+			pointer-events: initial
+
+.artists
+	list-style-type: none
+	margin: 0 auto
+	padding: 0
+	width: 80%
+
 .footer-item
 	margin-bottom: 1em
 
