--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -41,7 +41,7 @@
 		transition: opacity 0.3s
 
 		&:before
-			border-left: 2px solid black
+			border: 1px solid black
 			bottom: 3em
 			content: ''
 			height: 4em
