--- a/wp-content/themes/mc2015/css/_layout.sass
+++ b/wp-content/themes/mc2015/css/_layout.sass
@@ -47,6 +47,9 @@ main
 				margin-bottom: 0
 				padding: 0
 
+	&:not(.index)
+		margin-top: $menu_height
+
 .vertical-align
 	& > *
 		display: inline-block !important
@@ -59,6 +62,6 @@ main
 		margin-right: -0.75em
 		vertical-align: middle
 
-@media screen and (min-width: $desktop)
+@media screen and (min-width: $tablet)
 	.vertical-align:before
 		margin-right: -0.25em
