--- a/wp-content/themes/mc2015/css/_state.sass
+++ b/wp-content/themes/mc2015/css/_state.sass
@@ -1,13 +1,11 @@
-@media screen and (max-width: $desktop)
+@media screen and (max-width: $tablet)
 	.navigation-menu.is-visible
 		background: #222
 		border: 10px solid
 		color: white
 		height: 100%
 		left: 0
-		position: fixed
 		top: 0
-		z-index: 999999999999999
 
 		a
 			color: white
