--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -90,6 +90,8 @@ main {
         list-style-type: none;
         margin-bottom: 0;
         padding: 0; }
+  main:not(.index) {
+    margin-top: 96px; }
 
 .vertical-align > * {
   display: inline-block !important;
@@ -168,6 +170,8 @@ main {
   .artist:hover .view-artist {
     opacity: 1;
     pointer-events: initial; }
+  .artist:not(:last-of-type) {
+    margin-bottom: 2em; }
 
 .artists {
   list-style-type: none;
@@ -210,18 +214,27 @@ main {
   .logo a {
     font-size: 4rem; }
 
-.navigation-menu .menu {
-  font-family: "suisse_works";
-  font-weight: bold;
-  text-transform: lowercase; }
-.navigation-menu .social-networks {
-  display: none;
-  margin: 0; }
-  .navigation-menu .social-networks .social-network {
-    color: white;
-    display: inline-block;
-    font-size: 1.5em;
-    padding: 0.25em; }
+.navigation-menu {
+  background: rgba(255, 255, 255, 0.7);
+  border: 10px solid black;
+  border-bottom: none;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999999999999999; }
+  .navigation-menu .menu {
+    font-family: "suisse_works";
+    font-weight: bold;
+    text-transform: lowercase; }
+  .navigation-menu .social-networks {
+    display: none;
+    margin: 0; }
+    .navigation-menu .social-networks .social-network {
+      color: white;
+      display: inline-block;
+      font-size: 1.5em;
+      padding: 0.25em; }
 
 .picture-credits {
   bottom: 0;
@@ -272,7 +285,6 @@ main {
 @media screen and (max-width: 48em) {
   .navigation-menu {
     height: 96px;
-    position: relative;
     -webkit-transition: all 0.3;
     transition: all 0.3;
     width: 100%; }
@@ -332,22 +344,34 @@ main {
     list-style-type: none;
     padding: 0; }
   .navigation-menu li {
-    display: inline-block;
-    margin-left: 1em; }
+    display: inline-block; }
   .navigation-menu .kc-ml-languages {
     position: absolute;
     right: 10em;
     top: 1em; }
+  .navigation-menu .kc-ml-languages a,
   .navigation-menu .menu a {
     color: rgba(0, 0, 0, 0.3); }
+  .navigation-menu .kc-ml-languages a:hover,
+  .navigation-menu .kc-ml-languages li.current_page_item a,
+  .navigation-menu .kc-ml-languages li.current-language a,
   .navigation-menu .menu a:hover,
-  .navigation-menu .menu li.current_page_item a {
+  .navigation-menu .menu li.current_page_item a,
+  .navigation-menu .menu li.current-language a {
     color: black; }
+  .navigation-menu .menu li {
+    margin-left: 1em; }
   .navigation-menu #hamburguer {
     display: none !important; }
 
   .picture-credits {
     display: block; } }
+@media screen and (min-width: 62.5em) {
+  .navigation-menu nav {
+    left: 0;
+    position: absolute;
+    right: 0;
+    text-align: center; } }
 @media screen and (max-width: 48em) {
   .navigation-menu.is-visible {
     background: #222;
@@ -355,9 +379,7 @@ main {
     color: white;
     height: 100%;
     left: 0;
-    position: fixed;
-    top: 0;
-    z-index: 999999999999999; }
+    top: 0; }
     .navigation-menu.is-visible a {
       color: white; }
       .navigation-menu.is-visible a:hover {
