--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -118,7 +118,8 @@
 	text-align: left
 
 .index-menu
-	margin-top: -10em
+	margin-bottom: 14em
+	margin-top: 2em
 
 .kc-ml-languages
 	display: none
@@ -243,7 +244,7 @@
 			top: 0
 
 		.menu
-			font-size: 66px
+			font-size: 33px
 
 		.nav-footer
 			bottom: 1em
@@ -290,6 +291,7 @@
 					height: 2em
 
 	.index-menu
+		margin-bottom: 0
 		margin-top: 0
 
 	.footer-item
