--- a/wp-content/themes/mc2015/css/_base.sass
+++ b/wp-content/themes/mc2015/css/_base.sass
@@ -22,7 +22,7 @@ html,
 main.index,
 .wrap.index
 	min-height: 100%
-	height: 100%
+	//height: 100%
 
 figure
 	margin: 0
@@ -51,3 +51,10 @@ header
 
 main
 	padding: 1em
+
+@media screen and (min-width: $tablet)
+	body.home,
+	html,
+	main.index,
+	.wrap.index
+		height: 100%
